# SmartWatch

./: .gitignore  .mxproject  CMakeLists.txt  README.md  SmartWatch_STM32F411.ioc
01_APP/: CMakeLists.txt  README.md
01_APP/User_Init/01_Platform_IO_Register/: CMakeLists.txt  user_periph_setup.c  user_periph_setup.h
01_APP/User_Init/02_User_Task_Config/: CMakeLists.txt  user_task_config.c  user_task_config.h
01_APP/User_Init/User_Init_Imple/: CMakeLists.txt  user_init.c  user_init.h
02_BSP_Platform/: CMakeLists.txt  README.md
02_BSP_Platform/01_Bsp/: CMakeLists.txt
02_BSP_Platform/01_Bsp/AHT21/: CMakeLists.txt
02_BSP_Platform/01_Bsp/AHT21/AHT21_Driver/: aht21_driver.c  aht21_driver.h  aht21_reg.h
02_BSP_Platform/01_Bsp/AHT21/AHT21_Handler/: aht21_handler.c  aht21_handler.h
02_BSP_Platform/01_Bsp/MPU6050/: CMakeLists.txt
02_BSP_Platform/01_Bsp/MPU6050/MPU6050_Driver/: circular_buffer.c  circular_buffer.h  mpu6050_driver.c  mpu6050_driver.h  mpu6050_reg.h  mpu6050_reg_bit.h
02_BSP_Platform/01_Bsp/MPU6050/MPU6050_Handler/: mpu6050_handler.c  mpu6050_handler.h
02_BSP_Platform/02_Adapter/: CMakeLists.txt
02_BSP_Platform/02_Adapter/02_1-AHT21/: CMakeLists.txt
02_BSP_Platform/02_Adapter/02_1-AHT21/adapter/: aht21_adaption.c  aht21_adaption.h
02_BSP_Platform/02_Adapter/02_1-AHT21/wrapper/: aht21_wrapper.c  aht21_wrapper.h
02_BSP_Platform/02_Adapter/02_2-MPU6050/: CMakeLists.txt
02_BSP_Platform/02_Adapter/02_2-MPU6050/adapter/: mpu6050_adaption.c  mpu6050_adaption.h
02_BSP_Platform/02_Adapter/02_2-MPU6050/wrapper/: mpu6050_wrapper.c  mpu6050_wrapper.h
02_BSP_Platform/02_Adapter/02_X-Debug/: user_debug.c
02_MCU_Platform/: CMakeLists.txt
02_MCU_Platform/MCU_Core_GPIO/: CMakeLists.txt  gpio_define.h  gpio_port.c  gpio_port.h
02_MCU_Platform/MCU_Core_I2C/: CMakeLists.txt  i2c_port.c  i2c_port.h
02_OS_Platform/: CMakeLists.txt
02_OS_Platform/inc/: platform_os.h
02_OS_Platform/src/Event/: CMakeLists.txt  os_event_port.c  os_event_port.h
02_OS_Platform/src/Mutex/: CMakeLists.txt  os_mutex_port.c  os_mutex_port.h
02_OS_Platform/src/Queue/: CMakeLists.txt  os_queue_port.c  os_queue_port.h
02_OS_Platform/src/Sema/: CMakeLists.txt  os_sema_port.c  os_sema_port.h
02_OS_Platform/src/System/: CMakeLists.txt  os_system_port.c  os_system_port.h
02_OS_Platform/src/Task/: CMakeLists.txt  os_task_port.c  os_task_port.h
03_Libraries/: CMakeLists.txt
03_Libraries/02_1-Common/DWT_Delay/: CMakeLists.txt  DWT_Delay.h  DWT_delay.c
03_Libraries/02_1-Common/FIFO/: CMakeLists.txt  multi_cyc_fifo.c  multi_cyc_fifo.h
03_Libraries/02_2-ThirdParty/SEGGER/: CMakeLists.txt
03_Libraries/02_2-ThirdParty/elog/src/: elog_port.c
04_Service/: CMakeLists.txt  service_sensor.c  service_sensor.h
04_Service/service_motion_process/: CMakeLists.txt  motion_port.c  motion_port.h
04_Service/service_temp_humi_process/: CMakeLists.txt  temp_humi_port.c  temp_humi_port.h
04_Service/service_watchdog_monitor/: CMakeLists.txt  watchdog_monitor.c  watchdog_monitor.h
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
